#15 - Reconfigure donation page to use Stripe.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "authorizenet/authorizenet": "~1.8",
+    "stripe/stripe-php": "3.*",
     "php-curl-class/php-curl-class": "~3.5",
     "wixel/gump": "dev-master"
   }
