--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
     "authorizenet/authorizenet": "~1.8",
-    "php-curl-class/php-curl-class": "~3.5"
+    "php-curl-class/php-curl-class": "~3.5",
+    "google/recaptcha": "~1.1"
   }
 }
