--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   },
   "devDependencies": {
     "gulp": "^3.8.8",
-    "laravel-elixir": "^4.0.0"
+    "laravel-elixir": "^4.0.0",
+    "sortablejs": "1.2.1"
+  },
+  "engines": {
+    "npm": "3.9.5",
+    "node": "6.2.2"
   }
 }
