--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
   "require": {
     "stripe/stripe-php": "3.*",
     "php-curl-class/php-curl-class": "~3.5",
-    "wixel/gump": "dev-master",
-    "google/recaptcha": "~1.1"
+    "wixel/gump": "dev-master"
   },
   "autoload": {
     "psr-4": {
